fix about box size on ios

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -240,7 +240,6 @@ section {
 }
 
 .about-box {
-  height: 100%;
   background-color: $white;
   border-radius: $border-radius;
   box-shadow: $default-box-shadow;
@@ -266,6 +265,10 @@ section {
     margin-bottom: 0.5rem;
     font-weight: 600;
     @include semi-bold;
+  }
+
+  @include media-breakpoint-up(lg) {
+    height: 100%;
   }
 }
 
